# mmem_debug

./: .gitignore  CMakeLists.txt  README.md  make.sh  mmem_debug.code-workspace
.github/workflows/: cmake.yml  cmake.yml.bak  every_day_build.yml  on_pull_request.yml  on_push.yml
.workflow/: cmake-gitee.yml
adapter/: adapter.c  adapter.h
include/: mmem.h  mmem_debug.h  mmem_dump.h
src/: mlist.h  mmem.h  mmem_debug.c  mmem_debug_adapter.c  mmem_debug_adapter.h
test/: CMakeLists.txt  README.md  main.c
test/CUnit/lib/: libcunit.la  libcunit.so.1.0.1
test/CUnit/lib/pkgconfig/: cunit.pc
test/test/: malloc_test.c
test/tests/: 05_free_all_test.c  06_dump_test_counts.c  07_dump_test_mmem_info.c  09_dump_test_mmem_block_info.c  calloc_test.c  dump_test.c  free_all_test.c  free_test.c  malloc_test.c  realloc_test.c  tests.h
test/tests.bak/: dump_test.c  free_all_test.c  realloc_test.c
